--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,5 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
-#admin-page{
-  padding-top:0px;
-}
+//#admin-page{
+//  padding-top:0px;
+//}
